Results of the CNN added to the final report

--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -1351,7 +1351,66 @@
     "<div style=\"text-align: center;\">\n",
     "    <img src=\"./model_images/confusion3.png\" alt=\"Image\" width=\"800\">\n",
     "</div>\n",
+    "### Our model\n",
     "\n",
+    "The RNN development took place on the `RNN.ipynb` (and on `RNN_extra`) but we will summarise the process in this topic.\n",
+    "\n",
+    "- First of all, we applied the data preprocessing described in this notebook, on chapter 3.\n",
+    "  \n",
+    "- To choose the architecture, we considered the procedures on the two following papers:\n",
+    "    - [Bharati Vidyapeeth’s College of Engineering Paper](https://dergi.neu.edu.tr/index.php/aiit/article/download/740/327/3147)\n",
+    "    - [St.Petersburg Polytechnic University](https://annals-csis.org/Volume_18/drp/pdf/185.pdf)\n",
+    "      \n",
+    "  The summary of the paper's parameter choices are on the already mentioned file.\n",
+    "\n",
+    "- Then, we created the train tests split, following the fold division recommended by the [website](https://urbansounddataset.weebly.com/urbansound8k.html), and created histograms to evaluate the class distribution for each of the folds.\n",
+    "\n",
+    "- We generated the models using **tensorflow** and **keras** module, following the architecture on both papers, varying some parameters along the way.\n",
+    "\n",
+    "- To evaluate the performance, we verified some metrics for the average of folds, and created confusion matrices that combine all folds, to get a general sense of the model's combined performance.\n",
+    "\n",
+    "### Results\n",
+    "\n",
+    "The confusion matrix for all folds combined, as well as the distribution of the accuracies are displayed in the graphs below.\n",
+    "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <img src=\"./model_images/confusion3.png\" alt=\"Image\" width=\"800\">\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <img src=\"./model_images/weighted3.png\" alt=\"Image\" width=\"800\">\n",
+    "</div>\n",
+    "\n",
+    "We can also compare the training accuracy and the validation, throughout the epochs, for each fold.\n",
+    "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <img src=\"./model_images/train_vs_val3.png\" alt=\"Image\" width=\"800\">\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "#### **Loss and F1 Score:**\n",
+    "- **Average Loss**: 1.5959 ± 0.1156  \n",
+    "- **Average F1 Score (Weighted)**: 48.35% ± 3.01%\n",
+    "\n",
+    "#### **Accuracies:**\n",
+    "- **Average Training Accuracy**: 70.04% ± 2.52%  \n",
+    "- **Average Validation Accuracy**: 51.90% ± 3.22%  \n",
+    "- **Average Test Accuracy**: 49.01% ± 3.63%  \n",
+    "- **Average Weighted Accuracy**: 50.70% ± 4.58%\n",
+    "\n",
+    "#### Key Considerations\n",
+    "\n",
+    "Training every possible combination of folds, wasn’t feasible due to the time it would take. Instead, we randomly selected 10 combinations for each validation fold to test. Throughout the testing process, it became clear that some folds perform really well on validation, while others do poorly. \n",
+    "\n",
+    "If we had the time to run all combinations, we’d likely end up with more consistent and improved final results, as we could verify during some development testing stages (70% training vs 66% validation | weighted accuracies).\n",
+    "\n",
+    "### Conclusion for the LSTM\n",
+    "\n",
+    "The LSTM model for the UrbanSound8k dataset did okay but has plenty of room to get better. It worked well for some sounds, like class 6, but struggled with classes 1 and 8, which is clear from the confusion matrix. \n",
+    "\n",
+    "Simplifying the model (using fewer layers, adding more dropout, using smaller batches) helped avoid overfitting but made it harder for the model to fully learn complex patterns. The big gap between training accuracy and validation accuracy portrays this issue.\n",
+    "\n",
+    "These changes create a generally better and more balanced model. The average validation performance is not spectacular, but we simply could not improve in order to consistently output good results.\n",
     "<div style=\"text-align: center;\">\n",
     "    <img src=\"./model_images/weighted3.png\" alt=\"Image\" width=\"800\">\n",
     "</div>\n",
@@ -1393,45 +1452,50 @@
    "id": "af292af54755cbc2",
    "metadata": {},
    "source": [
-    "## 6. Convolutional Neural Network {#cnn}\n",
+    "## **6. Convolutional Neural Network (CNN)** {#cnn}\n",
+    "\n",
     "[Back to Index](#index)\n",
     "\n",
-    "Convolutional Neural Networks (CNNs) are a **specialized class of artificial neural networks designed for processing structured grid-like data**, such as images or spectrograms. They excel in tasks like image recognition, object detection, and audio signal classification due to their hierarchical feature extraction.\n",
+    "Convolutional Neural Networks (CNNs) are a class of feedforward neural networks designed to process grid-like data, such as images and audio spectrograms. Their ability to automatically learn features from raw data through convolution operations makes them ideal for tasks like image classification, object detection, and audio signal recognition.\n",
     "\n",
-    "### Key Aspects of CNN Architecture:\n",
+    "---\n",
     "\n",
-    "1. **Convolutional Operation**\n",
-    "   The core building block of CNNs is the convolution operation, which applies learnable filters to local regions of the input data. For an input $\\mathbf{x}$ and filter $\\mathbf{w}$, the convolution is defined as:\n",
+    "### **Key Components of CNNs**\n",
+    "\n",
+    "1. **Convolutional Layers**\n",
+    "   CNNs use convolutional layers instead of dense matrix multiplications. Convolutions involve sliding a filter (kernel) over the input to compute feature maps. For an input $ \\mathbf{x} $ and filter $ \\mathbf{w} $, the operation is defined as:\n",
     "   $$\n",
     "   (\\mathbf{x} * \\mathbf{w})(i, j) = \\sum_{m} \\sum_{n} \\mathbf{x}(i+m, j+n) \\cdot \\mathbf{w}(m, n)\n",
     "   $$\n",
-    "   This operation extracts spatial patterns, such as edges or textures, while preserving spatial relationships.\n",
+    "   - **Advantage**: Filters allow **sparse connectivity**, meaning each output depends on only a local region of the input.\n",
+    "   - **Parameter Sharing**: The same filter is applied across the input, significantly reducing the number of parameters compared to dense networks.\n",
     "\n",
-    "2. **Feature Hierarchy**\n",
-    "   CNNs build feature hierarchies by stacking multiple convolutional layers:\n",
-    "   - **Lower Layers:** Detect simple patterns like edges or corners.\n",
-    "   - **Deeper Layers:** Capture complex features like shapes or objects.\n",
+    "2. **Pooling Layers**\n",
+    "   Pooling layers downsample feature maps, making the model computationally efficient and invariant to small spatial translations:\n",
+    "   - **Max Pooling**: Retains the maximum value in a local region:\n",
+    "     $$\n",
+    "     \\mathbf{p}(i, j) = \\max_{(m,n) \\in \\mathcal{R}(i,j)} \\mathbf{x}(m, n)\n",
+    "     $$\n",
+    "   - **Average Pooling**: Computes the average value over the pooling region.\n",
     "\n",
-    "3. **Pooling Layers**\n",
-    "   Pooling layers reduce the spatial dimensions of feature maps, making computations more efficient and robust to small spatial variations. For example, max-pooling computes the maximum value in a local region:\n",
-    "   $$\n",
-    "   \\mathbf{p}(i, j) = \\max_{(m,n) \\in \\mathcal{R}(i,j)} \\mathbf{x}(m, n)\n",
-    "   $$\n",
-    "   where $\\mathcal{R}(i, j)$ defines the pooling region for position $(i, j)$.\n",
+    "3. **Feature Hierarchies**\n",
+    "   By stacking convolutional and pooling layers, CNNs learn hierarchical features:\n",
+    "   - **Early Layers**: Extract simple features like edges or corners.\n",
+    "   - **Deeper Layers**: Capture complex features like shapes, objects, or high-level patterns.\n",
     "\n",
     "4. **Fully Connected Layers**\n",
-    "   After convolutional and pooling layers, fully connected layers interpret the extracted features for classification. The output is typically passed through a softmax function to compute class probabilities:\n",
+    "   At the network's end, fully connected layers aggregate the features from previous layers for classification. Outputs are typically passed through a softmax activation function to compute probabilities for each class:\n",
     "   $$\n",
-    "   p_{\\text{model}}(y | \\mathbf{x}) = \\frac{\\exp(\\mathbf{z}_y)}{\\sum_{c=1}^{C} \\exp(\\mathbf{z}_c)}\n",
+    "   p(y | \\mathbf{x}) = \\frac{\\exp(\\mathbf{z}_y)}{\\sum_{c=1}^{C} \\exp(\\mathbf{z}_c)}\n",
     "   $$\n",
-    "   where $\\mathbf{z}$ is the output of the fully connected layer, $C$ is the number of classes, and $y$ is the target class.\n",
+    "   where $ \\mathbf{z} $ is the output vector, $ C $ is the number of classes, and $ y $ is the target label.\n",
     "\n",
-    "5. **CNN Loss: Cross-Entropy**\n",
-    "   The CNN loss for classification tasks is often the categorical cross-entropy between the predicted class probabilities $\\hat{\\mathbf{y}}$ and the true labels $\\mathbf{y}$:\n",
+    "5. **Loss Function**\n",
+    "   CNNs often use the **categorical cross-entropy loss** for classification tasks:\n",
     "   $$\n",
     "   \\mathcal{L}(\\mathbf{y}, \\hat{\\mathbf{y}}) = - \\sum_{c=1}^{C} y_c \\log(\\hat{y}_c)\n",
     "   $$\n",
-    "   where $y_c$ is the true probability of class $c$, and $\\hat{y}_c$ is the predicted probability.\n"
+    "   where $ y_c $ and $ \\hat{y}_c $ are the true and predicted probabilities for class $ c $, respectively.\n"
    ]
   },
   {
@@ -1441,39 +1505,93 @@
    "source": [
     "### **Our CNN Model**\n",
     "\n",
-    "The CNN processes both **2D** and **1D audio features**, ensuring compatibility with specialized convolutional layers:\n",
+    "The CNN was designed to process both **2D** and **1D audio features**, leveraging specialized convolutional layers to extract distinct patterns from temporal and spectral representations:\n",
+    "\n",
     "- **2D Features**:\n",
-    "  Representations like Mel spectrograms, MFCCs, chroma, and spectral contrast are formatted as $(height, width, 1)$ for **Conv2D layers**, combining temporal and frequency information.\n",
-    "  - `mel_shape`: \\( (128, 320, 1) \\)\n",
-    "  - `mfcc_shape`: \\( (40, 320, 1) \\)\n",
-    "  - `chroma_shape`: \\( (12, 320, 1) \\)\n",
-    "  - `contrast_shape`: \\( (7, 320, 1) \\)\n",
+    "  Representations like Mel spectrograms, MFCCs, chroma, and spectral contrast are formatted as $(height, width, 1)$ for **Conv2D layers**, combining temporal and frequency information effectively.\n",
+    "  - `mel_shape`: $ (128, 320, 1) $\n",
+    "  - `mfcc_shape`: $ (40, 320, 1) $\n",
+    "  - `chroma_shape`: $ (12, 320, 1) $\n",
+    "  - `contrast_shape`: $ (7, 320, 1) $\n",
     "\n",
     "- **1D Features**:\n",
-    "  Temporal features such as spectral rolloff and zero-crossing rate are structured as $(time\\_steps,1) $ for **Conv1D layers**, focusing on temporal patterns.\n",
-    "  - `rolloff_shape`: \\( (320, 1) \\)\n",
-    "  - `zcr_shape`: \\( (320, 1) \\)\n",
+    "  Temporal features such as spectral rolloff and zero-crossing rate are structured as $(time\\_steps, 1)$ for **Conv1D layers**, focusing on capturing temporal dynamics.\n",
+    "  - `rolloff_shape`: $ (320, 1) $\n",
+    "  - `zcr_shape`: $ (320, 1) $\n",
     "\n",
+    "The architecture employs **parallel processing streams**, where each stream is tailored to a specific feature type. These streams are merged into a unified representation, enabling the model to leverage complementary features for robust classification. This design draws inspiration from the following works:\n",
     "\n",
-    "The architecture employs **parallel processing streams**, each tailored to a specific feature type. These streams are merged into a combined representation, enabling robust decision-making. Key inspirations include:\n",
+    "1. **[Multi-Representation CNNs for Audio Classification](https://link.springer.com/article/10.1007/s11042-021-11610-8)**:  \n",
+    "   Inspired our use of independent CNN streams for different feature types (e.g., Mel spectrograms, MFCCs, and rolloff), allowing specialized processing for each representation.\n",
     "\n",
-    "1. [**Multi-Representation CNNs for Audio Classification**](https://link.springer.com/article/10.1007/s11042-021-11610-8): \n",
-    "   This approach processes diverse feature representations independently, combining their outputs for improved accuracy. Similarly, our model uses separate CNN streams for features like Mel spectrograms, MFCCs, and rolloff.\n",
-    "   \n",
+    "2. **[Ensemble CNNs for Audio Classification](https://www.mdpi.com/2076-3417/11/13/5796)**:  \n",
+    "   While this study emphasizes ensemble learning, we adapted their feature-specific processing approach by integrating parallel CNN branches into a unified architecture.\n",
     "\n",
-    "2. [**Ensemble CNNs for Audio Classification**](https://www.mdpi.com/2076-3417/11/13/5796): \n",
-    "   While this study emphasizes ensembles, our model integrates specialized CNN branches into a unified architecture, inspired by their feature-specific processing concept.\n",
-    "   \n",
+    "3. **[Braided CNNs](https://ietresearch.onlinelibrary.wiley.com/doi/pdfdirect/10.1049/iet-spr.2019.0381)**:  \n",
+    "   Inspired our parallel processing of temporal (1D) and spectral (2D) features, using **Conv2D** for frequency-based inputs and **Conv1D** for temporal dynamics.\n",
     "\n",
-    "3. [**Braided CNNs**](https://ietresearch.onlinelibrary.wiley.com/doi/pdfdirect/10.1049/iet-spr.2019.0381): \n",
-    "   Inspired by the parallel processing of temporal and frequency features, our model uses **Conv2D** for spectral features and **Conv1D** for temporal ones, ensuring efficient feature extraction.\n",
-    "   \n",
-    "\n",
-    "\n",
+    "---\n",
     "\n",
     "### **Results**\n",
     "\n",
-    "PLACEHOLDER"
+    "The CNN model’s performance is summarized below, with visual representations of key metrics:\n",
+    "\n",
+    "<div style=\"text-align: center;\"> \n",
+    "    <img src=\"model_images/Cumulative_CNN.png\" alt=\"Confusion Matrix\" width=\"800\">\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"text-align: center;\"> \n",
+    "    <img src=\"model_images/Loss_Accuracy_CNN.png\" alt=\"Loss and Accuracy\" width=\"800\">\n",
+    "</div>\n",
+    "\n",
+    "Class-wise performance across folds is displayed below:\n",
+    "\n",
+    "<div style=\"text-align: center;\"> \n",
+    "    <img src=\"model_images/Class-Wise Accuracy.png\" alt=\"Class-wise Accuracy\" width=\"800\">\n",
+    "</div>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **Accuracies**:\n",
+    "- **Training Accuracy**: 90.97% ± 1.38%  \n",
+    "- **Validation Accuracy**: 69.27% ± 3.10%  \n",
+    "- **Test Accuracy**: 66.27% ± 4.11%\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Key Observations**\n",
+    "\n",
+    "#### **Performance Across Classes**:\n",
+    "- **Strengths**:  \n",
+    "  The model excels at distinguishing distinct sound classes such as *gun_shot*, *car_horn*, and *dog_bark*, with high accuracy and minimal variability across folds. These classes have unique acoustic characteristics that are effectively captured by the CNN.\n",
+    "  \n",
+    "- **Weaknesses**:  \n",
+    "  The model struggles with acoustically similar classes like *air_conditioner*, *engine_idling*, and *jackhammer*. These mechanical sounds share overlapping rhythmic and frequency patterns, leading to notable misclassifications. This behavior is reflected in the confusion matrix and the class-wise accuracy plot, where these classes exhibit lower accuracy and higher variability.\n",
+    "\n",
+    "#### **Overfitting Concerns**:\n",
+    "- The training accuracy of **91%** compared to validation (**69%**) and test (**66%**) accuracies indicates some degree of overfitting. While regularization techniques like dropout and batch normalization mitigated this to an extent, the complexity of the model and challenges in differentiating acoustically similar sounds contributed to this gap.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Training Stability**\n",
+    "\n",
+    "The training and validation loss/accuracy curves across the 10 folds highlight a stable training process:\n",
+    "- **Early Stopping**: Prevented overfitting by halting training when no further validation improvement was observed (patience = 10 epochs).\n",
+    "- **Learning Rate Reduction**: Adjusted the learning rate dynamically (factor of 0.5 after 5 stagnant validation epochs), ensuring smoother convergence.\n",
+    "- These mechanisms facilitated effective training while avoiding unnecessary epochs, although some variability in validation performance across folds persisted due to differences in data splits and class complexity.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Conclusion for the CNN**\n",
+    "\n",
+    "The CNN model demonstrates commendable performance on the UrbanSound8K dataset, particularly in distinguishing distinct sound classes. However, it encounters challenges with acoustically similar classes, such as *air_conditioner*, *engine_idling*, and *jackhammer*, leading to misclassifications. This suggests the model effectively captures unique features but struggles with overlapping acoustic characteristics.\n",
+    "\n",
+    "To improve generalization and robustness:\n",
+    "- **Advanced Regularization**: Experiment with additional dropout layers, smaller kernels, and simpler architectures.\n",
+    "- **Attention Mechanisms**: Incorporate attention layers to focus on critical parts of the input.\n",
+    "- **Data Augmentation**: Use advanced techniques like pitch shifting or time-stretching to diversify training data.\n",
+    "\n",
+    "The CNN achieves a decent test accuracy of **66%**, making it effective for distinct classes but highlighting the need for further refinements to handle overlapping categories and achieve consistent performance across all sound classes."
    ]
   },
   {
