DeepFoll error correction

--- a/DeepFool.ipynb
+++ b/DeepFool.ipynb
@@ -750,10 +750,8 @@
     "X_class = np.array(features_df['classID'].tolist())\n",
     "folds = np.array(features_df['fold'])\n",
     "\n",
-    "# Reshape Mel spectrograms for RNN input\n",
-    "X_mel = X_mel.reshape(X_mel.shape[0], X_mel.shape[1], X_mel.shape[2], 1)  # (samples, time_steps, freq_bins, channels)\n",
-    "\n",
-    "# Check the shape of the reshaped features\n",
+    "# Reshape Mel spectrograms for RNN input (samples, time_steps, freq_bins)\n",
+    "X_mel = X_mel.reshape(X_mel.shape[0], X_mel.shape[1], X_mel.shape[2])  # Remove the channel dimension\n",
     "print(f\"Shape of Mel spectrogram input: {X_mel.shape}\")"
    ],
    "id": "55a5b9429645197"
@@ -775,7 +773,7 @@
     "    print(f\"Processing fold {fold}...\")\n",
     "\n",
     "    # File to save robustness results\n",
-    "    file_path = f\"robustness/rnn_models.pkl\"\n",
+    "    file_path = f\"robustness/rnn_robustness_fold{fold}.pkl\"\n",
     "\n",
     "    # Skip fold if results already exist\n",
     "    if os.path.exists(file_path):\n",
@@ -786,7 +784,7 @@
     "    test_idx = (folds == fold)\n",
     "    train_idx = ~test_idx\n",
     "\n",
-    "    X_train, X_test = X_mfcc[train_idx], X_mfcc[test_idx]\n",
+    "    X_train, X_test = X_mel[train_idx], X_mel[test_idx]\n",
     "    y_train, y_test = X_class[train_idx], X_class[test_idx]\n",
     "\n",
     "    # Load the RNN model for the current fold\n",
@@ -804,10 +802,10 @@
     "\n",
     "    # Run DeepFool on each test example\n",
     "    for i in range(num_test_examples):\n",
-    "        print(f\"Processing example {i+1}/{num_test_examples} in fold {fold}...\")\n",
+    "        print(f\"Processing example {i + 1}/{num_test_examples} in fold {fold}...\")\n",
     "\n",
-    "        # Prepare input\n",
-    "        example_input = {\"rnn_input\": np.expand_dims(X_test[i], axis=0)}\n",
+    "        # Prepare input (ensure the shape matches RNN's expected input)\n",
+    "        example_input = np.expand_dims(X_test[i], axis=0)  # Shape: (1, time_steps, freq_bins)\n",
     "\n",
     "        # Apply DeepFool\n",
     "        perturbation, iters, fool_label = deepfool(rnn_model, example_input)\n",
@@ -822,7 +820,7 @@
     "    os.makedirs(\"robustness\", exist_ok=True)\n",
     "    with open(file_path, \"wb\") as f_out:\n",
     "        pickle.dump(robustness_values_rnn_fold, f_out)\n",
-    "    print(f\"Saved robustness results for fold {fold}.\")\n"
+    "    print(f\"Saved robustness results for fold {fold}.\")"
    ],
    "id": "52386428704d11e"
   },
@@ -858,25 +856,34 @@
    "outputs": [],
    "execution_count": null,
    "source": [
+    "# Calculate mean and standard deviation of robustness values\n",
     "mean_robustness = np.mean(robustness_values_rnn_fold)\n",
     "std_robustness = np.std(robustness_values_rnn_fold)\n",
     "\n",
-    "# Threshold for outliers\n",
+    "# Define thresholds for outliers (±2 standard deviations)\n",
     "threshold_high = mean_robustness + 2 * std_robustness\n",
     "threshold_low = mean_robustness - 2 * std_robustness\n",
     "\n",
-    "# Identify outliers\n",
-    "outliers = [(i, value) for i, value in enumerate(robustness_values_rnn_fold) if value > threshold_high or value < threshold_low]\n",
+    "# Identify outliers (indices and values)\n",
+    "outliers = [(i, value) for i, value in enumerate(robustness_values_rnn_fold)\n",
+    "            if value > threshold_high or value < threshold_low]\n",
     "\n",
+    "# Print summary of outliers\n",
     "print(f\"Number of outliers: {len(outliers)}\")\n",
     "print(\"Outlier indices and values:\", outliers)\n",
+    "\n",
+    "# Ensure y_test contains class IDs, not one-hot encoding\n",
+    "if len(y_test.shape) > 1 and y_test.shape[1] > 1:\n",
+    "    y_test = np.argmax(y_test, axis=1)  # Convert one-hot to class IDs\n",
+    "\n",
     "# Map robustness values to their respective classes\n",
-    "outlier_classes = [y_test[idx] for idx, _ in outliers]  # Use y_test instead of test_labels\n",
+    "outlier_classes = [y_test[idx] for idx, _ in outliers]\n",
     "\n",
     "# Count occurrences of each class in outliers\n",
     "from collections import Counter\n",
     "outlier_class_counts = Counter(outlier_classes)\n",
     "\n",
+    "# Print outlier class distribution\n",
     "print(\"Outlier Class Distribution:\")\n",
     "for class_id, count in outlier_class_counts.items():\n",
     "    print(f\"Class {class_id}: {count} occurrences\")\n"
