added deepfool summary, images, to report. Missing coherence between CNN and RNN summaries.

--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -1530,7 +1530,6 @@
     "3. **[Braided CNNs](https://ietresearch.onlinelibrary.wiley.com/doi/pdfdirect/10.1049/iet-spr.2019.0381)**:  \n",
     "   Inspired our parallel processing of temporal (1D) and spectral (2D) features, using **Conv2D** for frequency-based inputs and **Conv1D** for temporal dynamics.\n",
     "\n",
-    "---\n",
     "\n",
     "### **Results**\n",
     "\n",
@@ -1550,14 +1549,13 @@
     "    <img src=\"model_images/Class-Wise Accuracy.png\" alt=\"Class-wise Accuracy\" width=\"800\">\n",
     "</div>\n",
     "\n",
-    "---\n",
     "\n",
-    "#### **Accuracies**:\n",
+    "\n",
+    "### **Accuracies**:\n",
     "- **Training Accuracy**: 90.97% ± 1.38%  \n",
     "- **Validation Accuracy**: 69.27% ± 3.10%  \n",
     "- **Test Accuracy**: 66.27% ± 4.11%\n",
     "\n",
-    "---\n",
     "\n",
     "### **Key Observations**\n",
     "\n",
@@ -1571,7 +1569,6 @@
     "#### **Overfitting Concerns**:\n",
     "- The training accuracy of **91%** compared to validation (**69%**) and test (**66%**) accuracies indicates some degree of overfitting. While regularization techniques like dropout and batch normalization mitigated this to an extent, the complexity of the model and challenges in differentiating acoustically similar sounds contributed to this gap.\n",
     "\n",
-    "---\n",
     "\n",
     "### **Training Stability**\n",
     "\n",
@@ -1580,7 +1577,6 @@
     "- **Learning Rate Reduction**: Adjusted the learning rate dynamically (factor of 0.5 after 5 stagnant validation epochs), ensuring smoother convergence.\n",
     "- These mechanisms facilitated effective training while avoiding unnecessary epochs, although some variability in validation performance across folds persisted due to differences in data splits and class complexity.\n",
     "\n",
-    "---\n",
     "\n",
     "### **Conclusion for the CNN**\n",
     "\n",
@@ -1591,7 +1587,9 @@
     "- **Attention Mechanisms**: Incorporate attention layers to focus on critical parts of the input.\n",
     "- **Data Augmentation**: Use advanced techniques like pitch shifting or time-stretching to diversify training data.\n",
     "\n",
-    "The CNN achieves a decent test accuracy of **66%**, making it effective for distinct classes but highlighting the need for further refinements to handle overlapping categories and achieve consistent performance across all sound classes."
+    "The CNN achieves a decent test accuracy of **66%**, making it effective for distinct classes but highlighting the need for further refinements to handle overlapping categories and achieve consistent performance across all sound classes.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -1602,7 +1600,61 @@
     "## 7. Deepfool {#deepfool}\n",
     "[Back to Index](#index)\n",
     "\n",
-    "PLACEHOLDER"
+    "Deep learning models have achieved significant success across various domains, including image recognition, natural language processing, and audio analysis. Despite their impressive accuracy, **these models are susceptible to adversarial examples** — small, often imperceptible perturbations that can cause misclassifications. Understanding and mitigating these vulnerabilities are critical for improving model robustness.\n",
+    "\n",
+    "The [**DeepFool algorithm**](https://medium.com/machine-intelligence-and-deep-learning-lab/a-review-of-deepfool-a-simple-and-accurate-method-to-fool-deep-neural-networks-b016fba9e48e), proposed by Seyed-Mohsen Moosavi-Dezfooli, Alhussein Fawzi, and Pascal Frossard, systematically **computes the smallest perturbation required** to cause a classifier to misclassify the target. \n",
+    "\n",
+    "There is a notebook `DeepFool.ipynb` that tries employs DeepFool to evaluate the robustness of two architectures trained on the **UrbanSound8K dataset**.\n",
+    "\n",
+    "### Algorithm\n",
+    "\n",
+    "The DeepFool algorithm iteratively linearizes a classifier's decision boundaries to compute the smallest perturbation $ r $ required to change the predicted label of an input $x$.\n",
+    "\n",
+    "There is a different algorithm for binary and multi-class classifiers.  this case (multi-class), it acts by considering multiple binary classifiers. \n",
+    "\n",
+    "Quoting from the website:\n",
+    "*\"Given there are multiple classes, the loss and backpropagation need to be computed for each class label allowed by the function. When finding the minimum perturbation, the difference must be taken between the computed values for each label and the computed values for the label of the original prediction.\"*\n",
+    "\n",
+    "There is something worth mentioning, fundamental to this chapter:\n",
+    "\n",
+    "**This algorithm is designed for images.** The objective is to create a perturbation, invisible to the human eye. In our case, **we manipulated the spectrograms, the conversion of sounds to images**. What this means is, there are 2 limitations to the application: **there is no guarantee that after the procedure, the sounds sound the same.**\n",
+    "\n",
+    "The algorithm for multi-class is as follows:\n",
+    "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <img src=\"./images/deepfool_multi.webp\" alt=\"Image\" width=\"500\">\n",
+    "</div>\n",
+    "\n",
+    "It is a lot to take in, but to summarise it, it can be translated to the following steps:\n",
+    "\n",
+    "1. **Initialization**: Start with the input sample $x$, and set $x_0=x$\n",
+    "2. **Iterative Perturbation**: Compute the gradients of the classifier output with respect to $x$ for all classes and determine the minimal perturbation $r$ required to cross the decision boundary. Update $x \\gets x + r$\n",
+    "3. **Stopping**: The algorithm stops when $ \\hat{k}(x + r) \\neq \\hat{k}(x) $ or the maximum number of iterations $ T $ is reached.\n",
+    "4. **Output**: It returns the minimal perturbation *$\\hat{r}$*, which is what we wanted. $\\hat{r}$ is the sum of $r_i$, which is:\n",
+    "\n",
+    "$$\n",
+    "r_i = \\frac{|f'_{\\hat{l}}|}{\\|w'_{\\hat{l}}\\|_2^2} w'_{\\hat{l}}\n",
+    "$$\n",
+    "\n",
+    "where $f'_{\\hat{l}}$ is the difference in classifier scores, and $w'_{\\hat{l}}$ is the gradient difference representing the boundary direction. The total perturbation $\\hat{r}$ is the sum of all $r_i$, and it represents the minimal adjustment needed to make the classifier misclassify $x$.\n",
+    "\n",
+    "### Summary of the Notebook\n",
+    "\n",
+    "The process took the following steps:\n",
+    "\n",
+    "1. **Feature Preparation**: loads pre-extracted features from the UrbanSound8K dataset, organizes them into a DataFrame, and prepares both 2D and 1D.\n",
+    "\n",
+    "2. **Supporting Functions**: Functions that aid the algorithm, including method to calculate gradient, and deepfool itself, which computes the algorithm described above. There is also methods to calculate the model robustness.\n",
+    "\n",
+    "3. **Data preprocessing**: Same as described on chapter 3, including padding, scaling, and train-test split, among others.\n",
+    "\n",
+    "4. **Robustness Calculation**: Calculates the robustness for all folds. This part made us realise the presence of outliers in the dataset.\n",
+    "\n",
+    "5. **Clear outliers**: Self explanatory, we obtained 44 outliers.\n",
+    "\n",
+    "6. **Application**: We then tried to apply the algorithm to the RNN, but due to lack of computational power, we could not end the elaboration of the algorithm.\n",
+    "\n",
+    "---\n"
    ]
   },
   {
@@ -1618,7 +1670,9 @@
     "\n",
     "The **complexity of multiclass audio classification became evident**, particularly **due to amount of urban sounds** and overlapping between classes. It is worth mentioning as well that through DeepFool, we get a further understanding on the decision boundaries of our models, helping us identify vulnerabilities.\n",
     "\n",
-    "This study highlights the importance of combining powerful machine learning techniques with thoughtful analysis to improve classification accuracy and develop robust solutions for complex urban sound environments."
+    "This study highlights the importance of combining powerful machine learning techniques with thoughtful analysis to improve classification accuracy and develop robust solutions for complex urban sound environments.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -1672,7 +1726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
