Report review (rafa)

--- a/rnn.ipynb
+++ b/rnn.ipynb
@@ -2565,18 +2565,11 @@
     "\n",
     "ChatGPT for some graph organization and resizing - [link](https://chatgpt.com/)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "urban-class",
    "language": "python",
    "name": "python3"
   },
