--- a/rnn.ipynb
+++ b/rnn.ipynb
@@ -1679,6 +1679,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![\"1\"](./model_images/initial_summary.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 137,
    "metadata": {},
@@ -1972,6 +1979,13 @@
     "- ReduceLR patience = 3\n",
     "\n",
     "In the end, the adjustments resulted in a much simpler neural network, with faster training times, and produced the most balanced results **among all the numerous combinations we tested**. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![\"1\"](./model_images/final_summary.png)"
    ]
   },
   {
